third commit, Routes GET reservations, Ajout reservations SWAGGER
